# Z21

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  idf_component.yml
.github/workflows/: build.yml  release.yml  tests.yml
docker/: Dockerfile  entrypoint.sh
examples/: CMakeLists.txt
examples/common/: get_socket.cpp  get_socket.hpp
examples/posix/: CMakeLists.txt  README.md
examples/posix/main/: CMakeLists.txt  app_main.cpp  get_socket.cpp  get_socket.hpp  idf_component.yml  server.cpp  server.hpp
examples/sim/: CMakeLists.txt  accessory.cpp  accessory.hpp  accessory_list.cpp  accessory_list.hpp  config.cpp  config.hpp  initial_cvs.hpp  initial_loco_cvs.hpp  led.cpp  led.hpp  loco.cpp  loco.hpp  loco_list.cpp  loco_list.hpp  log.cpp  log.hpp  main.cpp  main_window.cpp  main_window.hpp  server.cpp  server.hpp  settings.cpp  settings.hpp  system.cpp  system.hpp  text_view.cpp  text_view.hpp  turnout.cpp  turnout.hpp  turnout_list.cpp  turnout_list.hpp
examples/sim/src/: accessory.hpp  accessory_list.cpp  config.cpp  loco.hpp  main.cpp  main_window.cpp  main_window.hpp  server.cpp  settings.hpp  system.cpp  turnout_list.cpp
include/z21/: accessory_info.hpp  broadcast_flags.hpp  capabilities.hpp  central_state.hpp  central_state_ex.hpp  common_settings.hpp  dataset.hpp  datasets.hpp  db0.hpp  exor.hpp  header.hpp  hw_type.hpp  loco_info.hpp  mm_dcc_settings.hpp  port.hpp  railcom_data.hpp  socket.h  socket.hpp  system_state.hpp  turnout_info.hpp  utility.hpp  x_header.hpp  z21.hpp
include/z21/server/: base.hpp
include/z21/server/intf/: can.hpp  dcc.hpp  driving.hpp  fast_clock.hpp  interface.hpp  loconet.hpp  logging.hpp  programming.hpp  railcom.hpp  rbus.hpp  settings.hpp  switching.hpp  system.hpp  zlink.hpp
tests/: CMakeLists.txt  accessory.cpp  loco_info.cpp  socket.cpp
tests/server/: base_mock.hpp  base_test.cpp  base_test.hpp  logoff.cpp  track_power.cpp  utility.cpp  utility.hpp
